# shine

./: .gitignore  Cargo.toml  README.md  install.sh  shine-master-specification.md
benchmarks/: README.md  benchmark.py  benchmark.shn  run_benchmarks.py  universal.shn
benchmarks/cpp/: benchmark.cpp
benchmarks/csharp/: Benchmark.csproj  Program.cs
benchmarks/rust/: benchmark.rs
docs/: 01-getting-started.md  02-projects-and-cli.md  03-syntax.md  04-values-and-types.md  05-variables-and-constants.md  06-operators.md  07-conditions.md  08-functions.md  09-loops-and-ranges.md  10-lists.md  11-strings.md  12-builtins-and-conversions.md  13-mathematics.md  14-console-and-files.md  15-diagnostics-and-checking.md  16-testing.md  17-formatting-and-build.md  18-language-reference.md  19-cookbook.md  20-mvp-boundaries.md  21-modules-and-language-evolution.md  22-classes-and-objects.md  23-dictionaries.md  24-roadmap-to-1.0.md  README.md
docs/examples/: classes.shn  data-report.shn  dictionaries.shn  functions.shn  lists.shn  loops.shn  mathematics.shn  strings.shn  variables.shn
docs/rfcs/: 0001-native-compiler.md  0002-runtime-abi.md  0003-scientific-memory.md
examples/: circles.shn  hello.shn  ranges.shn  statistics.shn
src/: ast.rs  checker.rs  diagnostics.rs  evaluator.rs  hir.rs  lexer.rs  lib.rs  main.rs  modules.rs  numeric_vm.rs  parser.rs  source.rs  token.rs
tests/: language.rs
zed-extension/: .gitignore  README.md  extension.toml
zed-icon-theme/: README.md  extension.toml
zed-icon-theme/icon_themes/: shine.json
(+4 files in other folders)
