[package]
name = "shine-lang"
version = "0.2.0"
edition = "2021"
description = "The Shine programming language"
license = "MIT"

[[bin]]
name = "shine"
path = "src/main.rs"

[lib]
name = "shine_lang"
path = "src/lib.rs"

[dependencies]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
